--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Son Phuong Nam Admin</title>
+    <title>Sơn Phương Nam</title>
   </head>
 
   <body>
