--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      key="description"
+      content="Chuyên cung cấp các dịch vụ thi công sơn epoxy, sơn nền nhà xưởng, chống thấm chuyên nghiệp. Bán và phân phối các sản phẩm sơn epoxy Hàn quốc, Đài Loan... chính hãng giá rẻ ở Tp. Hồ Chí Minh."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://i.imgur.com/yGP7IhH.jpg" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="son-phuong-nam" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
